java-now-cloudy/noname/kafka/target/classes/META-INF/fabric8/openshift/kafka-connect-and-stream-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    expose: "true"
    provider: fabric8
    project: kafka-connect-and-streams-management-service
    version: 0.2.0.BUILD-SNAPSHOT
    group: https0x3A0x2F0x2Fgithub0x2Ecom0x2Ftangfeixiong0x2Fgo-to-kubernetes
  name: kafka-connect-and-stream
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: kafka-connect-and-stream
